<resources>
    <string name="app_name">TruthOrDare</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="clicked_p">Profile clicked</string>
    <string name="welcome">Welcome </string>
    <string name="saved">Info Saved Successfully</string>
    <string name="truth">Truth</string>
    <string name="truth_button">Truth Button</string>
    <string name="penalty_button">Penalty Button</string>
    <string name="penalty">Penalty</string>
    <string name="dare_button">Dare Button</string>
    <string name="dare">Dare</string>
    <string name="spin_button">Spin Button</string>
    <string name="spin">Spin</string>
    <string name="start_button">Start Button</string>
    <string name="start">Start</string>
    <string name="bottle_button">Bottle Button</string>
    <string name="bottle">Bottle</string>
    <string name="rules_button">Rules Button</string>
    <string name="game_rules">How to play</string>
    <string name="loginbtn">Login</string>
    <string name="don_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register now</string>
    <string name="remember_me">Remember me</string>
    <string name="suggest_new_truth_dare_or_punishment"><u><b>Suggest new Truth, Dare or Punishment</b></u></string>
    <string name="let_s_n_play">Let\'s \n Play !</string>
    <string name="profile">Profile</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="theme">Theme</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="save_name">Save name</string>
    <string name="edit">edit</string>
    <string name="log_out">log out</string>
    <string name="language">Language</string>
    <string name="delete_my_account"><u>Delete My Account</u></string>
    <string name="send_suggestion">Send suggestion</string>
    <string name="enter_your_suggestion">Enter your suggestion</string>
    <string name="chosen_value">chosen value</string>
    <string name="truth_or_dare">Truth or Dare😉?</string>
    <string name="finished">Finished 🚨!</string>
    <string name="left">Left </string>
    <string name="let">\n</string>
    <string name="password">Password</string>
    <string name="register"><u>Register</u></string>
    <string name="loginreg">Login</string>
    <string name="login"><u>Login</u></string>
    <string name="registerLogin">Register</string>
    <string name="forget_password"><u>Forget password?</u></string>
    <string name="enter_email">Please Enter Email</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="no_internet">No internet connection</string>
    <string name="welcome_again">Welcome again 🎉 !</string>
    <string name="login_failed">Login Failed..</string>
    <string name="register_failed">Register failed!</string>
    <string name="Welcome">Welcome \uD83C\uDF89 !</string>
    <string name="enter_name">Please Enter Your Full Name</string>
    <string name="enter_confirm_password">Please Enter Password Confirmation</string>
    <string name="passwords_should_match">Password Should Match Password Confirmation</string>
    <string name="not_registered_msg">You are not registered yet \n register now to view your profile</string>
    <string name="confirm_password">Confirm password</string>
    <string name="reset">Reset</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="rules">Rules: 📜</string>
    <string name="tord_rules">1- You should sit as a group in a circle and spin the bottle . \n2- Player 1 who faced the bottle bottom will give player 2 the ability to choose truth or dare .\n3- If player 2 choose truth or dare he should do the require action before the end of the time .\n4- If player 2 didn\'t do what is required, player 1 can choose a punishment and player 2 must do it before the timer ends .\n5- If the players want to ask free questions or choose their own dare, they can play with random bottle .\n6- If the player has any suggestion for the game, he ca simply fill the suggestion field .\n7- The player can play either he registers or not but cannot change the app language or theme unless he registers .</string>
    <string name="notification_title">We miss you 😓</string>
    <string name="notification_msg">Come back and play soon 🤼</string>


</resources>