<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="Theme.TruthOrDareSaudi"
    android:layout_width="match_parent"
    android:layout_height="270dp"
    android:background="@drawable/round_corner">


    <EditText
        android:id="@+id/email_reset"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:hint="@string/enter_your_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibReset"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/mybtn"
        android:contentDescription="@string/start_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_reset" />

    <TextView
        android:id="@+id/tvReset"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/reset"
        android:textColor="@color/myDark_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ibReset"
        app:layout_constraintEnd_toEndOf="@+id/ibReset"
        app:layout_constraintStart_toStartOf="@+id/ibReset"
        app:layout_constraintTop_toTopOf="@+id/ibReset" />


</androidx.constraintlayout.widget.ConstraintLayout>